--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,12 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+//const { src, ...attrs } = Astro.props;
+const pageTitle = "I'm Todd Crow."
 ---
 
-<Layout>
-	<Welcome />
+<Layout pageTitle={pageTitle}>
+	<p>I'm a web dev who found his way into specializing in HTML email. I am empathetic, curious, and a persistent organizer.</p>
+	<p class="emphasis">I am seeking to join a team where I can grow my skills and work with exciting clients.</p>
+	<p>Beyond just HTML emails, I help startups and teams get their message heard by any means I can.</p>
+	<p>Looking for a developer to code up pixel-perfect emails? <a href="#contactForm">Reach out and tell me about your team!</a></p>
 </Layout>
