--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,34 @@
+---
+const { title } = Astro.props; 
+import '../styles/global.css';
+//Gotta get my styles done at some point
+
+import Nav from '../components/Nav.astro';
+import Footer from '../components/Footer.astro';
+import SideFooter from '../components/SideFooter.astro';
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Crowbell Design: {title} </title> 
 	</head>
-	<body>
-		<slot />
+	<body class="font-sans text-gray-700 bg-gray-100">
+		<div class="m-auto flex flex-wrap p-6 sm:p-10 md:p-16 max-w-7xl">
+				<div class="order-1 w-full md:w-1/2 lg:w-2/5 md:pr-32 text-right">
+					<Nav />
+					<div class="sideLine hidden md:block md:pt-0 "><SideFooter /></div>
+				</div>
+				<div class="order-2 w-full md:w-1/2 lg:w-3/5">
+					<slot />
+				</div>
+				<div class="md:hidden order-3 w-full pt-12 topLine">
+					<Footer />
+				</div>
+		</div>
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
