Small Intro edit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,8 @@ const pageTitle = "I'm Todd Crow."
 ---
 
 <Layout pageTitle={pageTitle}>
-	<p>I'm a web dev who found his way into specializing in HTML email. I am empathetic, curious, and a persistent organizer.</p>
+	<p>I'm a web dev who found his way into specializing in email templates. I am empathetic, curious, and a persistent organizer.</p>
 	<p class="emphasis">I am seeking to join a team where I can grow my skills and work with exciting clients.</p>
-	<p>Beyond just HTML emails, I help startups and teams get their message heard by any means I can.</p>
-	<p>Looking for a developer to code up pixel-perfect emails? <a href="#contactForm">Reach out and tell me about your team!</a></p>
+	<p>Beyond just marketing technology, I help startups and teams get their message heard by any means I can.</p>
+	<p>Looking for a developer to code up pixel-perfect emails or get those audiences segmented? <a href="#contactForm">Reach out and tell me about your team!</a></p>
 </Layout>
