Fixing index in mobile

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ import SideFooter from '../components/SideFooter.astro';
 		<div class="m-auto flex flex-wrap p-6 sm:p-10 md:p-16 max-w-7xl">
 				<div class="order-1 w-full md:w-1/2 lg:w-2/5 md:pr-32 text-right">
 					<Nav />
-					<div class="sideLine hidden md:block md:pt-0 "><SideFooter /></div>
+					<div class="sideLine max-sm:hidden md:pt-0 "><SideFooter /></div>
 				</div>
 				<div class="order-2 w-full md:w-1/2 lg:w-3/5">
 					<slot />
