--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,11 +5,11 @@ const { pageTitle } = Astro.props;
   <h2>Crowbell Design</h1>
     <nav>
       <ul class="navLinks">
-        <li class="navLinkItem">
+        <li class="navLinkItem max-sm:inline">
           <a href="/"  class="navLinkText">Home</a></li>
-        <li class="navLinkItem">
+        <li class="navLinkItem max-sm:inline">
           <a href="/portfolio" class="navLinkText">Portfolio</a>
-        <li class="navLinkItem">
+        <li class="navLinkItem max-sm:inline">
           <a href="/about" class="navLinkText">About</a>
         </li>
       </ul>
