--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,10 +15,10 @@ import SideFooter from '../components/SideFooter.astro';
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Crowbell Design: {title} </title> 
+		<title>Crowbell Design{title} </title> 
 	</head>
 	<body class="font-sans text-gray-700 bg-gray-100">
-		<div class="m-auto flex flex-wrap p-6 sm:p-10 md:p-16 max-w-7xl">
+		<div class="m-auto md:flex flex-wrap p-6 sm:p-10 md:p-16 max-w-7xl">
 				<div class="order-1 w-full md:w-1/2 lg:w-2/5 md:pr-32 text-right">
 					<Nav />
 					<div class="sideLine max-sm:hidden md:pt-0 "><SideFooter /></div>
