Adding portfolio items
Rakuten, Collective Voice, ShopStyle

--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -23,7 +23,7 @@ const sortedPortfolioItems = portfolioItems.sort((a, b) => {
 ---
 <Layout pageTitle={pageTitle}>
 
-	<h1 class="heading">My portfolio</h1>
+	<h1 class="heading">My Portfolio</h1>
 	{sortedPortfolioItems.map((item) => (
 		<div>
 		<h3>
